<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackolympic"
    tools:context=".view.RegisterFragment">

    <include
        android:id="@+id/include"
        layout="@layout/fragment_intro"
        android:layout_width="413dp"
        android:layout_height="234dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_register_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/bottomFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blackolympic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_bottom_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/question_login"
            android:textColor="@color/yellowolympic"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <EditText
        android:id="@+id/username_register"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginTop="168dp"
        android:backgroundTint="@color/yellowolympic"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/yellowolympic"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_register_background" />

    <EditText
        android:id="@+id/email"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/yellowolympic"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/yellowolympic"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_register" />

    <EditText
        android:id="@+id/nome_register"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/yellowolympic"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/yellowolympic"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/cognome_register"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/yellowolympic"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/yellowolympic"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_register" />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/yellowolympic"
        android:hint="@string/new_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/yellowolympic"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cognome_register" />


    <EditText
        android:id="@+id/reinsertnewpassword"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/yellowolympic"
        android:hint="@string/reinsertnew_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/yellowolympic"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newpassword" />


    <Button
        android:id="@+id/register"
        android:layout_width="145dp"
        android:layout_height="44dp"
        android:layout_gravity="start"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/yellowolympic"
        android:enabled="true"
        android:fontFamily="serif"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reinsertnewpassword"
        app:layout_constraintVertical_bias="0.892"
        tools:ignore="RtlCompat"
        tools:textAllCaps="true" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/newpassword"
        app:layout_constraintStart_toStartOf="@+id/newpassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>