<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackolympic"
    tools:context=".view.SearchFragment">

    <include
        android:id="@+id/include"
        layout="@layout/fragment_intro"
        android:layout_width="413dp"
        android:layout_height="234dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_search_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/tvSearchTitle"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/searchtitle"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgGenderFilter"
        android:layout_width="361dp"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSearchTitle">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/man"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/woman"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbAll"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textSize="12sp" />
    </RadioGroup>


    <Button
        android:id="@+id/btnSearch"
        android:layout_width="118dp"
        android:layout_height="65dp"
        android:layout_marginBottom="296dp"
        android:backgroundTint="@color/yellowolympic"
        android:padding="16dp"
        android:text="@string/search"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- NestedScrollView scrollabile -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSearch">

        <!-- Contenuto scrollabile -->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSearchResultsrecyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@id/btnSearch"
                tools:listitem="@layout/item_results" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
